--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "main": "tailwind.config.js",
   "scripts": {
     "start": "nodemon app.js",
+    "startback": "nodemon backend.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
