--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
     "nodemon": "^3.1.0"
   },
