--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "env": "^0.0.2",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "memory-cache": "^0.2.0",
     "mysql2": "^3.9.3",
     "nodemon": "^3.1.0"
   },
